[package]
name = "gcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives ={ version = "0.4.2", features = ["serde"] }
bincode = "1.3.3"
blake3 = "1.5.0"
git2 = "0.18.1"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util-blutgang = "0.1.4"
serde = { version = "1.0.192", features = ["derive"] }
sled = "0.34.7"
tokio = {version = "1.34.0", features = ["full"]}
warp = "0.3.6"
simd-json = "0.13.4"
serde_json = "1.0.108"
rand = "0.8.5"
